# pyoni

./: CMakeLists.txt  DEPLOY.md  PKG-INFO  README  README.md  oni2depth.py  onifile.py  pyonitool.py  requirements.txt  setup.py  test.py  toolcut.py  toolext.py  toolfix.py  toolinfo.py  toolreg.py  tryall.sh  xn16zdec.cpp  xndec.py
anyregistration/: CMakeLists.txt  anyregistration.py
k2registration/: CMakeLists.txt  cureg.cu  cureg2.cu  genall.cpp  genpy.py  main.cpp  registrationK2.cpp  registrationK2.h
matlab/: readdepthbin.m
older/: nirecordbase.py  niskeleton.py  pyonifix.py
src/: pyonitool.py
src/anyregistration/: anyregistration.cpp  anyregistration.py
src/onitool/: D2S.py  kinect1.py  onifile.py  toolcut.py  toolext.py  toolfix.py  toolinfo.py  toolreg.py  tooltime.py
src/xndec/: CMakeLists.txt  xndec.py
